# GeBank

./: .env.example  .gitignore  ARCHITECTURE.md  Plan de Implementacion GeBankSaint V2.md  README.md  alembic.ini  plan.md  pyproject.toml  requirements.txt  test_banesco_real.xlsx
Sketch_of_dashboard_principal/auditoría_y_logs/: code.html
Sketch_of_dashboard_principal/configuración_de_conciliación/: code.html
Sketch_of_dashboard_principal/dashboard_principal/: code.html
Sketch_of_dashboard_principal/detalle_de_banco_&_transacciones/: code.html
Sketch_of_dashboard_principal/gestión_de_usuarios_y_permisos/: code.html
Sketch_of_dashboard_principal/listado_de_bancos/: code.html
Sketch_of_dashboard_principal/login_&_autenticación/: code.html
Sketch_of_dashboard_principal/modal_de_validación_de_pago/: code.html
Sketch_of_dashboard_principal/perfil_de_usuario/: code.html
Sketch_of_dashboard_principal/reporte_de_comisión_de_vendedores/: code.html
Sketch_of_dashboard_principal/reporte_de_pagos_(vista_vendedor)/: code.html
alembic/: env.py
app/: config.py  main.py
conductor/: architecture.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  validation_report.md  workflow.md
conductor/Documentacion 1_2/: INDICE-COMPLETO-SAINT-2-1-0.md  (+13 more)
config/: tasas.json
requirements/: base.txt  dev.txt
scripts/: DANGEROUS_reset_db.py  add_currency_to_mapping.py  build_css.sh  check_all_columns.py  check_columns.py  create_system_config.py  create_tables.py  diagnose_raw_sql.py  make_tasa_nullable.py  migrate_rates_to_db.py  prepare_test_environment.py  sync_deps.py  update_config_keys.py  update_schema_rates_type.py  update_schema_sprint3_4.py
tests/: conftest.py
(+113 files in other folders)
